--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ task clean(type: Delete) {
      constraint_layout_version = "1.1.3"
      material_version = "1.2.0-alpha04"
 
+     // architecture components
+     room_version = "2.2.3"
+
      // testing
      ext_junit_version = "1.1.1"
      espresso_version = "3.2.0"
