--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ task clean(type: Delete) {
      ext_junit_version = "1.1.1"
      espresso_version = "3.2.0"
      junit_version = "4.12"
+     truth_version = "0.44"
  }
