--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,11 @@ task clean(type: Delete) {
 
      // architecture components
      room_version = "2.2.3"
+     lifecycle_version = "2.2.0"
 
      // testing
+     arch_test_version = "2.1.0"
+     coroutines_test_version = "1.1.0"
      ext_junit_version = "1.1.1"
      espresso_version = "3.2.0"
      junit_version = "4.12"
