--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.nav_version = '2.2.0'
     repositories {
         google()
         jcenter()
@@ -12,6 +13,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
@@ -33,6 +35,7 @@ task clean(type: Delete) {
      core_ktx_version = "1.1.0"
      constraint_layout_version = "1.1.3"
      material_version = "1.2.0-alpha04"
+     legacy_support_version = "1.0.0"
 
      // architecture components
      room_version = "2.2.3"
