--- a/build.gradle
+++ b/build.gradle
@@ -52,4 +52,5 @@ task clean(type: Delete) {
      // third party
      retrofit_version = "2.7.1"
      kodein_version = "6.5.1"
+     glide_version = "4.9.0"
  }
