--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,8 @@ dependencies {
     implementation "org.kodein.di:kodein-di-framework-android-x:$kodein_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-dash:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
+
 }
